files/security-group.tf
#--------- Security Group For NAT Instance--------------


 resource "aws_security_group" "natsg" {
       name = "natsg"
       description = "Allow traffic to pass from the private subnet to the internet"

       ingress {
           from_port = 80
           to_port = 80
           protocol = "tcp"
           cidr_blocks = ["${var.private_subnet_cidr}"]
   }
       ingress {
           from_port = 443
           to_port = 443
           protocol = "tcp"
           cidr_blocks = ["${var.private_subnet_cidr}"]

      }
       ingress {
          from_port = 22
          to_port = 22
          protocol = "tcp"
          cidr_blocks = ["0.0.0.0/0"]
    }

	ingress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }


     egress {
         from_port = 80
         to_port = 80
         protocol = "tcp"
         cidr_blocks = ["0.0.0.0/0"]
     }
     egress {
         from_port = 443
         to_port = 443
         protocol = "tcp"
         cidr_blocks = ["${var.private_subnet_cidr}"]

      }
	egress {
          from_port = 22
          to_port = 22
          protocol = "tcp"
          cidr_blocks = ["0.0.0.0/0"]
   }

  egress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }

  vpc_id = "${aws_vpc.my_vpc.id}"
    tags = {
         Name = "sg-Agile-ssh-server"
    }
}



# ---------Security Froup For Agile Web Server----------------------------------------



resource "aws_security_group" "sg-agile-web-server" {
    name = "sg_WEB"
    description = "Allow traffic to pass from the public subnet to the internet"

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["${var.public_subnet_cidr2}"]
    }
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["${var.public_subnet_cidr2}"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
  
  ingress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


 egress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["${var.vpc_cidr}"]
    }
   
  egress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    vpc_id = "${aws_vpc.my_vpc.id}"

    tags = {
        Name = "sg-Agile-WEB-server"
    }
}

# ---------Security Group For Agile APP Server----------------------------------------



resource "aws_security_group" "sg-agile-APP-server" {
    name = "sg_APP"
    description = "Allow traffic to pass from the private subnet to the internet"

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["${var.public_subnet_cidr2}"]
    }
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["${var.public_subnet_cidr2}"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
  ingress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 22
	to_port = 22
        protocol = "tcp"
        cidr_blocks = ["${var.vpc_cidr}"]
        }

  egress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    

    vpc_id = "${aws_vpc.my_vpc.id}"

    tags = {
        Name = "sg-agile-APP-server"
    }
}
